# foldr-build

./: README.hs  README.md  foldr-build.cabal
src/Data/: FoldrBuild.hs
