cabal-version:      2.4
name:               foldr-build
version:            0.1.0.0

synopsis: Lazy, consume-once streams with foldr/build fusion.
description: Lazy, consume-once streams with foldr/build fusion.

bug-reports: https://github.com/sgraf812/foldr-build/issues

license: BSD-3-Clause

author: Sebastian Graf
maintainer: Sebastian Graf

copyright: 2022 Sebastian Graf
category: Data, Streaming

tested-with: GHC==8.10.7

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/sgraf812/foldr-build

library
  exposed-modules:
    Data.FoldrBuild

  other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base ^>=4.14.3.0
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   tests
  main-is:          Main.hs
  build-depends:    base >= 4.8 && < 5
                  , containers >= 0.5 && < 0.7
